# Gmail-Digest

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
src/gmail_digest/: __init__.py  ai.py  classifier.py  cli.py  config.py  digest.py  gmail_client.py  html_preview.py  models.py  preferences.py  sender.py  storage.py  whatsapp.py
tests/: test_classifier.py  test_digest.py  test_html_preview.py  test_preferences.py  test_whatsapp.py
